--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "react-jsx",
@@ -25,6 +25,8 @@
     ],
     "baseUrl": ".",
     "paths": {
+      "@/payload-config": ["./payload.config.ts"],
+      "@/payload-types": ["./payload-types.ts"],
       "@/*": [
         "./src/*"
       ]
