--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "generate:types": "payload generate:types"
   },
   "dependencies": {
-    "@payloadcms/db-sqlite": "^3.63.0",
-    "@payloadcms/next": "^3.63.0",
-    "@payloadcms/plugin-seo": "^3.63.0",
-    "@payloadcms/richtext-lexical": "^3.63.0",
+    "@payloadcms/db-sqlite": "^3.64.0",
+    "@payloadcms/next": "^3.64.0",
+    "@payloadcms/plugin-seo": "^3.64.0",
+    "@payloadcms/richtext-lexical": "^3.64.0",
     "@radix-ui/react-slot": "^1.2.4",
     "@tailwindcss/postcss": "^4.1.17",
     "@types/node": "24.10.0",
@@ -30,12 +30,13 @@
     "graphql": "^16.12.0",
     "lucide-react": "^0.553.0",
     "next": "16.0.1",
-    "payload": "^3.63.0",
+    "payload": "^3.64.0",
     "prism-react-renderer": "^2.4.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "sharp": "^0.34.5",
     "tailwind-merge": "^3.4.0",
+    "tw-animate-css": "^1.4.0",
     "typescript": "5.9.3"
   },
   "devDependencies": {
