Update environment configuration for new server URL, enhance Nginx setup with SSL support, and improve image handling in blog components. Add revalidation for posts and sitemap updates. Remove obsolete media files.

--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
 PAYLOAD_SECRET=top-secret-key
 DATABASE_URI=file:./site-test.db
-# NEXT_PUBLIC_SERVER_URL=http://localhost:3000
-NEXT_PUBLIC_SERVER_URL=https://app.local.tookey.cloud
+NEXT_PUBLIC_SERVER_URL=https://hyr0.xyz
