--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "packageManager": "bun@1.3.2",
   "scripts": {
     "dev": "next dev",
+    "predev": "bun generate",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "payload": "payload",
-    "generate": "bun generate:types && bun generate:importmap",
+    "generate": "bun generate:types && bun generate:importmap && bun generate:client",
     "generate:importmap": "payload generate:importmap",
-    "generate:types": "payload generate:types"
+    "generate:types": "payload generate:types",
+    "generate:client": "anchor build && bun create-codama-client.ts"
   },
   "dependencies": {
     "@payloadcms/db-sqlite": "^3.64.0",
@@ -20,11 +22,22 @@
     "@payloadcms/plugin-seo": "^3.64.0",
     "@payloadcms/richtext-lexical": "^3.64.0",
     "@radix-ui/react-slot": "^1.2.4",
+    "@solana-program/system": "^0.10.0",
+    "@solana-program/token": "^0.9.0",
+    "@solana/kit": "^5.0.0",
+    "@solana/react": "^5.0.0",
+    "@solana/spl-token": "^0.4.14",
+    "@solana/transaction-confirmation": "^5.0.0",
+    "@solana/transaction-messages": "^5.0.0",
     "@tailwindcss/postcss": "^4.1.17",
     "@tailwindcss/typography": "^0.5.19",
+    "@tanstack/react-query": "^5.90.11",
+    "@tanstack/react-query-devtools": "^5.91.1",
     "@types/node": "24.10.0",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
+    "@wallet-standard/core": "^1.1.1",
+    "@wallet-standard/react": "^1.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint": "9.39.1",
@@ -46,7 +59,10 @@
     "typescript": "5.9.3"
   },
   "devDependencies": {
+    "@codama/nodes-from-anchor": "^1.3.4",
+    "@codama/renderers-js": "^1.5.1",
     "@tailwindcss/cli": "^4.1.17",
+    "codama": "^1.4.2",
     "tailwindcss": "^4.1.17"
   }
 }
