--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PAYLOAD_SECRET=top-secret-key
 DATABASE_URI=file:./site-test.db
 NEXT_PUBLIC_SERVER_URL=https://hyr0.xyz
+
+SOLANA_RPC=https://api.devnet.solana.com
+SOLANA_WS_RPC=wss://api.devnet.solana.com
