--- a/package.json
+++ b/package.json
@@ -14,14 +14,24 @@
     "generate": "bun generate:types && bun generate:importmap && bun generate:client",
     "generate:importmap": "payload generate:importmap",
     "generate:types": "payload generate:types",
-    "generate:client": "anchor build && bun create-codama-client.ts"
+    "generate:client": "anchor build -- --features mainnet && bun create-codama-client.ts"
   },
   "dependencies": {
     "@payloadcms/db-sqlite": "^3.64.0",
     "@payloadcms/next": "^3.64.0",
     "@payloadcms/plugin-seo": "^3.64.0",
     "@payloadcms/richtext-lexical": "^3.64.0",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-hover-card": "^1.1.15",
+    "@radix-ui/react-progress": "^1.1.8",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@solana-program/compute-budget": "^0.11.0",
     "@solana-program/system": "^0.10.0",
     "@solana-program/token": "^0.9.0",
     "@solana/kit": "^5.0.0",
@@ -38,11 +48,13 @@
     "@types/react-dom": "19.2.2",
     "@wallet-standard/core": "^1.1.1",
     "@wallet-standard/react": "^1.0.1",
+    "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint": "9.39.1",
     "eslint-config-next": "16.0.1",
     "graphql": "^16.12.0",
+    "jotai": "^2.15.2",
     "lucide-react": "^0.553.0",
     "next": "16.0.1",
     "payload": "^3.64.0",
@@ -54,6 +66,7 @@
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.1",
     "sharp": "^0.34.5",
+    "superjson": "^2.2.6",
     "tailwind-merge": "^3.4.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "5.9.3"
