Update environment configuration for local Solana RPC, enhance package.json with new dependencies and scripts for development, and implement a connection drawer component for improved wallet interactions. Refactor vault exploration features to include manager registry handling and performance metrics. Clean up code formatting for better readability.

--- a/.env
+++ b/.env
@@ -2,5 +2,8 @@ PAYLOAD_SECRET=top-secret-key
 DATABASE_URI=file:./site-test.db
 NEXT_PUBLIC_SERVER_URL=https://hyr0.xyz
 
-SOLANA_RPC=https://api.devnet.solana.com
-SOLANA_WS_RPC=wss://api.devnet.solana.com
+# SOLANA_RPC=https://api.devnet.solana.com
+# SOLANA_WS_RPC=wss://api.devnet.solana.com
+
+SOLANA_RPC=http://127.0.0.1:8899
+SOLANA_WS_RPC=ws://127.0.0.1:8900
