--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
   "packageManager": "bun@1.3.2",
   "scripts": {
     "dev": "next dev",
-    "predev": "bun generate",
+    "predev": "bun generate:dev",
     "build": "next build",
+    "prebuild": "bun generate",
     "start": "next start",
     "lint": "next lint",
     "payload": "payload",
     "generate": "bun generate:types && bun generate:importmap && bun generate:client",
+    "generate:dev": "bun generate:types && bun generate:importmap && bun generate:client:dev",
     "generate:importmap": "payload generate:importmap",
     "generate:types": "payload generate:types",
+    "generate:client:dev": "anchor build && bun create-codama-client.ts",
     "generate:client": "anchor build -- --features mainnet && bun create-codama-client.ts"
   },
   "dependencies": {
@@ -51,6 +54,7 @@
     "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "decimal.js": "^10.6.0",
     "eslint": "9.39.1",
     "eslint-config-next": "16.0.1",
     "graphql": "^16.12.0",
@@ -75,6 +79,7 @@
     "@codama/nodes-from-anchor": "^1.3.4",
     "@codama/renderers-js": "^1.5.1",
     "@tailwindcss/cli": "^4.1.17",
+    "@types/decimal.js": "^7.4.3",
     "codama": "^1.4.2",
     "tailwindcss": "^4.1.17"
   }
