--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-hover-card": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-progress": "^1.1.8",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
@@ -61,6 +62,9 @@
     "jotai": "^2.15.2",
     "lucide-react": "^0.553.0",
     "next": "16.0.1",
+    "next-superjson": "1",
+    "next-superjson-plugin": "^0.6.3",
+    "next-themes": "^0.4.6",
     "payload": "^3.64.0",
     "prism-react-renderer": "^2.4.1",
     "react": "19.2.0",
@@ -70,6 +74,7 @@
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.1",
     "sharp": "^0.34.5",
+    "sonner": "^2.0.7",
     "superjson": "^2.2.6",
     "tailwind-merge": "^3.4.0",
     "tw-animate-css": "^1.4.0",
