Update environment configuration to use site.db for database URI and adjust .gitignore to exclude site-test.db. Add new site.db file for project data storage.

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PAYLOAD_SECRET=top-secret-key
-DATABASE_URI=file:./site-test.db
+DATABASE_URI=file:./site.db
 NEXT_PUBLIC_SERVER_URL=https://hyr0.xyz
 
 # SOLANA_RPC=https://api.devnet.solana.com
